--- a/LolSpellOverlay/Views/UserControls/EnemyRow.xaml
+++ b/LolSpellOverlay/Views/UserControls/EnemyRow.xaml
@@ -59,9 +59,10 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.3*"/>
-            <ColumnDefinition Width="0.3*"/>
-            <ColumnDefinition Width="0.3*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0" Width="30" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -100,5 +101,10 @@
         <Grid Grid.Column="2" Width="30" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center">
             <local:EnemySpell SpellName="{Binding Spell_F, RelativeSource={RelativeSource AncestorType={x:Type local:EnemyRow}}}" />
         </Grid>
+
+        <Grid Grid.Column="3" Width="30" Height="30" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <local:EnemySpell SpellName="{Binding Spell_G, RelativeSource={RelativeSource AncestorType={x:Type local:EnemyRow}}}" />
+        </Grid>
+        
     </Grid>
 </UserControl>
